--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -3,25 +3,21 @@ $dark-grey: rgb(25,25,25);
 $text-grey: rgb(55,55,55);
 $medium-grey: rgb(160,160,160);
 $light-grey: rgb(180,180,180);
+$orb-card-stage-grey: rgb(210, 210, 210);
 $very-light-grey: rgb(225,225,225);
 $ultra-light-grey: rgb(245,245,245);
 $black: rgba(0,0,0,1);
 $black-a75: rgba(0,0,0,.75);
 $black-a50: rgba(0,0,0,.5);
+$black-a66: rgba(0,0,0,.66);
 $black-a33: rgba(0,0,0,.33);
-$black-a25: rgba(0,0,0,.33);
+$black-a25: rgba(0,0,0,.25);
 $black-a15: rgba(0,0,0,.15);
 $white-a16: rgba(255,255,255,.16);
 $white-a33: rgba(255,255,255,.33);
 $white-a50: rgba(255,255,255,.50);
 $white-a75: rgba(255,255,255,.75);
 $body-bg-color: rgb(223,223,223); // grey averaged from bg-pattern(bullseyes)
-//$cg1: rgb(243,226,51);
-$cg1: rgb(252,159,86);
-//$cg2: rgb(35,88,114);
-$cg2: rgb(108,147,168);
-//$cg3: rgb(240,47,60);
-$cg3: rgb(240,47,60);
 $xtreme-blue:rgb(7,121,190);
 $xtreme-red:rgb(224,32,39);
 $xtreme-dark-red:rgb(172,8,25);
@@ -30,6 +26,7 @@ $xtreme-orange: rgb(255, 89, 0);
 $black: rgb(0,0,0);
 $white: rgb(255,255,255);
 $dark-grey: rgb(25,25,25);
+$transparent: rgba(0,0,0,0);
 // GRADIENTS
 @mixin orb-card-gradient() {
   background                 : #f5f5f5; /* Old browsers */
