--- a/webroot/scss/structure.scss
+++ b/webroot/scss/structure.scss
@@ -3,7 +3,7 @@ section { margin-bottom : 1rem; }
 .block { display: block; }
 .float-pane {
   border:$float-pane-border-width solid $white;
-  box-shadow:8px 8px 50px rgba(0,0,0,.6);
+  box-shadow:$float-pane-shadow-offset $float-pane-shadow-offset $float-pane-shadow-size $black-a66;
 }
 section.pagespan {
   height            : $focus-pane-height;
@@ -16,7 +16,12 @@ section.pagespan {
 .l-1 { z-index : 9000; }
 .l-2 { z-index : 8000; }
 .l-3 { z-index : 7000; }
-
+footer {
+  position:relative;
+  background-color:$dark-grey;
+  height: $footer-height;
+  margin-top: $footer-top-margin;
+}
 .spacer { @include unselectable; }
 
 
