--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -9,9 +9,20 @@
 }
 
 @font-face {
+  font-family : "Helvetica Neue Light Condensed";
+  src         : url("../files/HelveticaNeueLTStd-LtCn.otf");
+}
+
+@font-face {
   font-family : "Helvetica Neue Thin";
   src         : url("../files/HelveticaNeueLTStd-Th.otf");
 }
+
+@font-face {
+  font-family : "Helvetica Neue Thin Condensed";
+  src         : url("../files/HelveticaNeueLTStd-ThCn.otf");
+}
+
 
 @font-face {
   font-family : "Helvetica Neue Ultra Light";
@@ -34,21 +45,36 @@
   font-family : "Helvetica Neue Medium Condensed", arial, sans-serif;
 }
 
+@mixin HelveticaLtCn {
+  font-family : "Helvetica Neue Light Condensed", arial, sans-serif;
+}
+
 @mixin HelveticaTh {
   font-family : "Helvetica Neue Thin", arial, sans-serif;
+}
+
+@mixin HelveticaThCn {
+  font-family : "Helvetica Neue Thin Condensed", arial, sans-serif;
 }
 
 @mixin HelveticaUltLt {
   font-family : "Helvetica Neue Ultra Light", arial, sans-serif;
 }
 
-*.body-font-color { color : $body-font-color; }
+.body-font-color { color : $body-font-color; }
 
-span.block { display : block; }
-
-span.header-red { color : $xtreme-red; }
-
-span.header-thin { @include HelveticaTh; }
+#hours-and-location {
+  text-align: right;
+  line-height: 1.25rem;
+  padding-top:rem-calc(4px);
+  @include HelveticaThCn;
+  span.header-red { color : $xtreme-red; }
+  li:nth-of-type(2) {
+    padding-top:rem-calc(4px);
+    font-size: 1.25 * $body-font-size;
+  }
+  li:last-of-type {font-size: 0.75 * $body-font-size;}
+}
 
 /**************************************************************
 
@@ -59,17 +85,22 @@ span.header-thin { @include HelveticaTh; }
 /*      USER ACTIVITY PANEL     */
 #user-activity-panel {
   a {
-    @include HelveticaUltLt;
-    @include global-transition(color);
+    @include HelveticaLtCn;
+    transition: color 0.3s, font-family 0.3s;
     text-align  : center;
     line-height : 0.25 * $user-activity-panel-height;
     padding-top : 0.25 * $user-activity-panel-height;
     width       : $user-activity-panel-width;
     height      : $user-activity-panel-height;
     font-size   : $user-activity-panel-font-size;
-    &:hover { color : invert($body-font-color); }
-
+    &:hover {
+      color : invert($body-font-color);
+    //  opacity: 0.25;
+    }
   }
+   li.active {
+      a { @include HelveticaMdCn;}
+   }
   h2 {
     font-size   : $h3-font-size;
     line-height : $user-activity-panel-height;
@@ -95,7 +126,7 @@ li.orbcat {
     font-size   : rem-calc(14px);
     line-height : 0.1 * $orbcat-menu-height;
   }
-  &:hover, &.active {
+  &:hover, .active {
     a { color : $xtreme-yellow; }
   }
 
